Little fix on the spacing between buttons

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -72,8 +72,5 @@
         flex-wrap: wrap;
     }
 
-    .contact-info-container {
-        margin: 0;
-    }
 
 }
